Fixes #143 Implements loklak cow logo in middle on navbar and Signup via twitter side box with sample user commented

--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -144,6 +144,9 @@
                     </li>
                 </ul>
             </div>
+            <div class="collapse navbar-collapse pull-left" id="navbar-collapse" style="margin-left: 15%;">
+                <img src="../images/loklak_icon_yellow_45x45_transparent.png" alt="">
+            </div>
             <div class="navbar-custom-menu">
                 <ul class="nav navbar-nav">
                     <form class="navbar-form navbar-left" role="search" action="/search" >
@@ -152,6 +155,34 @@
                         </div>
                     </form>
                 </ul>
+                <ul class="nav navbar-nav">
+                <li>
+                    <a ng-href="/auth/twitter">
+                        <span class="fa fa-twitter fa-4">Signup Via Twitter</span>
+                    </a>
+                </li>
+                </ul>
+                <!-- <ul class="dropdown-menu">
+                  User image 
+                  <li class="user-header">
+                    <img src="../../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                    <p>
+                      Alexander Pierce - Web Developer
+                      <small>Member since Nov. 2012</small>
+                    </p>
+                  </li>
+                  Menu Footer
+                  <li class="user-footer">
+                    <div class="pull-left">
+                      <a href="#" class="btn btn-default btn-flat">Profile</a>
+                    </div>
+                    <div class="pull-right">
+                      <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                    </div>
+                  </li>
+                </ul>
+              </li>
+                </ul> -->
             </div>
         </div>
     </nav>
