Move debugged-content style to global

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -968,40 +968,43 @@ body {
 						display: inline-block;
 					}
 				}
-				.debugged-link-container {
-					max-height: 700px;
-					overflow: hidden;
-					.article-container {
-						> a {
-							display: block;
-						}
-						display: block;
-						.article-img-container {
-							width: 100%;
-							max-height: 285px;
-							overflow: hidden;
-							img {
-								width: 100%;
-								margin: 10px 0;
-							}
-						}
-						.article-title, .article-author {
-							margin-top: 10px;
-							color: black;
-							font-size: 15px;
-							text-transform: capitalize;
-						}
-						.article-author {
-							font-weight: 600;
-							margin: 10px 0;
-						}
-					}
-				}
 			}
 		}
 	}
 	
 /* End styling for search frontend */
+
+/* Link's debugged content */
+	.debugged-link-container {
+		max-height: 700px;
+		overflow: hidden;
+		.article-container {
+			> a {
+				display: block;
+			}
+			display: block;
+			.article-img-container {
+				width: 100%;
+				max-height: 285px;
+				overflow: hidden;
+				img {
+					width: 100%;
+					margin: 10px 0;
+				}
+			}
+			.article-title, .article-author {
+				margin-top: 10px;
+				color: black;
+				font-size: 15px;
+				text-transform: capitalize;
+			}
+			.article-author {
+				font-weight: 600;
+				margin: 10px 0;
+			}
+		}
+	}
+/* End link's debugged content */
 
 /* Styles for single tweet views */
 	.single-tweet {
