--- a/app/views/single-tweet.html
+++ b/app/views/single-tweet.html
@@ -1,68 +1,3 @@
 <div class="content-wrapper">
-	<div ng-show="singleTweet.showStatus" ng-attr-id="{{singleTweet.status.id_str}}" class="single-tweet tweet">
-		<div class="top-metadata">
-			<img class="avatar" 
-				 onError="this.onerror=null;this.src='/images/anon_200x200.png';"
-				 ng-src="{{singleTweet.status.user.profile_image_url_https}}" alt="user-images">
-				<!-- Metadata singleTweet.status -->
-		    <div class="user-data-wrapper">
-		    	<a class="name" ng-href="{{'https://twitter.com/' + singleTweet.status.user.screen_name}}">{{singleTweet.status.user.name}}</a>
-		    	<span class="screen-name">{{ "@" + singleTweet.status.user.screen_name}}</span>	
-		    </div>
-		</div>
-
-		<div class="tweet-content">
-		<!-- Main content -->
-		<p class="tweet-content-text" ng-bind-html="singleTweet.status.text | tweetMention | tweetHashtag | toTrusted"></p>
-
-		<!-- Images - 1 img -->
-		<div data-ng-click="singleTweet.openMasonry(singleTweet.status.id_str);" class="images-wrapper clearfix" ng-if="singleTweet.status.images_count === 1">
-		       <div class="single-masonry-item" ng-repeat="image in singleTweet.status.images">
-		           <img ng-src="{{image}}" alt="A masonry brick">
-		       </div>
-		</div>
-		<!-- Images - 2 imgs -->
-		<div data-ng-click="singleTweet.openMasonry(singleTweet.status.id_str);" class="images-wrapper clearfix showcomposition" ng-if="singleTweet.status.images_count === 2">
-		       <div class="double-masonry-item" ng-repeat="image in singleTweet.status.images">
-		           <img ng-src="{{image}}" alt="A masonry brick">
-		       </div>
-		</div>
-		<!-- Images - 3 imgs -->
-		<div data-ng-click="singleTweet.openMasonry(singleTweet.status.id_str);" class="images-wrapper clearfix showcomposition" ng-if="singleTweet.status.images_count === 3">
-		       <div ng-class="{'triple-masonry-item': true, 'first-item': ($index === 0)}" ng-repeat="image in singleTweet.status.images">
-		           <img ng-src="{{image}}" alt="A masonry brick">
-		       </div>
-		</div>
-		<!-- Images - 4 imgs -->
-		<div data-ng-click="singleTweet.openMasonry(singleTweet.status.id_str);" class="images-wrapper clearfix showcomposition" ng-if="singleTweet.status.images_count === 4">
-		       <div class="quad-masonry-item" ng-repeat="image in singleTweet.status.images">
-		           <img ng-src="{{image}}" alt="A masonry brick">
-		       </div>
-		</div>
-
-		<!-- Action list -->
-
-		<div class="action-list">
-			<div class="action-reply">
-				<button class="reply" />
-			</div>
-			<div class="action-retweet">
-				<button class="retweet" /><span ng-if="singleTweet.status.retweet_count" class="rt-count">{{singleTweet.status.retweet_count}}</span>	
-			</div>
-			<div class="action-favor">
-				<button class="favor" /><span ng-if="singleTweet.status.favourites_count" class="fav-count">{{singleTweet.status.favourites_count}}</span>		
-			</div>
-			<!-- <div class="action-more">
-				<i class="fa fa-circle"></i>
-				<i class="fa fa-circle"></i>
-				<i class="fa fa-circle"></i>
-			</div> -->
-		</div>
-
-		<!-- detailed metadata -->
-		<div class="detail-metadata">
-		    <span class="metadata">{{ singleTweet.status.created_at | date:'h:mm a - dd MMM yyyy .' }}</span> · 
-		</div>        
-		</div>
-	</div>
+	<div single-status open-swipe="singleTweet.openSwipe" data="singleTweet.status" show-status="singleTweet.showStatus"></div>
 </div>
