Enables click on signup and better font #143

--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -157,8 +157,8 @@
                 </ul>
                 <ul class="nav navbar-nav">
                 <li>
-                    <a ng-href="/auth/twitter">
-                        <span class="fa fa-twitter fa-4">Signup Via Twitter</span>
+                    <a ng-href="/auth/twitter" target="_self">
+                        <span><i style="padding-right: 4px;" class="fa fa-twitter"></i>Signup Via Twitter</span>
                     </a>
                 </li>
                 </ul>
