--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -23,203 +23,77 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 
-<body class="skin-blue">
-	<!-- Main Header -->
-	<header class="main-header">
+<body class="skin-blue layout-top-nav">
+	<div ng-include="" ng-if="root.fullscreenDisabled" src="'topnav.html'" class="ng-scope"><link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" class="ng-scope">
+<!-- ngIf: root.sidebarEnabled -->
 
-		<!-- Logo -->
-		<a href="index2.html" class="logo">
-			<!-- mini logo for sidebar mini 50x50 pixels -->
-			<span class="logo-mini"><img src="../images/loklak_icon_yellow_45x45_transparent.png" alt="Loklak Logo"></span>
-			<!-- logo for regular state and mobile devices -->
-			<span class="logo-lg"><b><code>Loklak</code></b></span>
-		</a>
-
-		<!-- Header Navbar -->
-		<nav class="navbar navbar-static-top" role="navigation">
-			<!-- Sidebar toggle button-->
-			<a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
-				<span class="sr-only">Toggle navigation</span>
-			</a>
-			<ul class="nav navbar-nav navbar-left">
-				<li ng-repeat="navItem in root.topNavItems"><a ng-href="{{navItem.link}}">{{navItem.title}}</a></li>
-			</ul>
-
-
-			<!-- Navbar Right Menu -->
-			<div class="navbar-custom-menu">
-				<ul class="nav navbar-nav">
-					<!-- Messages: style can be found in dropdown.less-->
-					<li class="dropdown messages-menu">
-						<!-- Menu toggle button -->
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-							<i class="fa fa-envelope-o"></i>
-							<span class="label label-success">4</span>
-						</a>
-						<ul class="dropdown-menu">
-							<li class="header">You have 4 messages</li>
-							<li>
-								<!-- inner menu: contains the messages -->
-								<ul class="menu">
-									<li><!-- start message -->
-										<a href="#">
-											<div class="pull-left">
-												<!-- User Image -->
-												<img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image"/>
-											</div>
-											<!-- Message title and timestamp -->
-											<h4>
-												Support Team
-												<small><i class="fa fa-clock-o"></i> 5 mins</small>
-											</h4>
-											<!-- The message -->
-											<p>Why not buy a new awesome theme?</p>
-										</a>
-									</li><!-- end message -->
-								</ul><!-- /.menu -->
-							</li>
-							<li class="footer"><a href="#">See All Messages</a></li>
-						</ul>
-					</li><!-- /.messages-menu -->
-
-					<!-- Notifications Menu -->
-					<li class="dropdown notifications-menu">
-						<!-- Menu toggle button -->
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-							<i class="fa fa-bell-o"></i>
-							<span class="label label-warning">10</span>
-						</a>
-						<ul class="dropdown-menu">
-							<li class="header">You have 10 notifications</li>
-							<li>
-								<!-- Inner Menu: contains the notifications -->
-								<ul class="menu">
-									<li><!-- start notification -->
-										<a href="#">
-											<i class="fa fa-users text-aqua"></i> 5 new members joined today
-										</a>
-									</li><!-- end notification -->
-								</ul>
-							</li>
-							<li class="footer"><a href="#">View all</a></li>
-						</ul>
-					</li>
-					<!-- Tasks Menu -->
-					<li class="dropdown tasks-menu">
-						<!-- Menu Toggle Button -->
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-							<i class="fa fa-flag-o"></i>
-							<span class="label label-danger">9</span>
-						</a>
-						<ul class="dropdown-menu">
-							<li class="header">You have 9 tasks</li>
-							<li>
-								<!-- Inner menu: contains the tasks -->
-								<ul class="menu">
-									<li><!-- Task item -->
-										<a href="#">
-											<!-- Task title and progress text -->
-											<h3>
-												Design some buttons
-												<small class="pull-right">20%</small>
-											</h3>
-											<!-- The progress bar -->
-											<div class="progress xs">
-												<!-- Change the css width attribute to simulate progress -->
-												<div class="progress-bar progress-bar-aqua" style="width: 20%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-													<span class="sr-only">20% Complete</span>
-												</div>
-											</div>
-										</a>
-									</li><!-- end task item -->
-								</ul>
-							</li>
-							<li class="footer">
-								<a href="#">View all tasks</a>
-							</li>
-						</ul>
-					</li>
-					<!-- User Account Menu -->
-					<li class="dropdown user user-menu">
-						<!-- Menu Toggle Button -->
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-							<!-- The user image in the navbar-->
-							<span class="hidden-xs">Loklak user</span>
-						</a>
-						<ul class="dropdown-menu">
-							<!-- The user image in the menu -->
-							<li class="user-header">
-								<img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image" />
-								<p>
-									Alexander Pierce - Web Developer
-									<small>Member since Nov. 2012</small>
-								</p>
-							</li>
-							<!-- Menu Body -->
-							<li class="user-body">
-								<div class="col-xs-4 text-center">
-									<a href="#">Followers</a>
-								</div>
-								<div class="col-xs-4 text-center">
-									<a href="#">Sales</a>
-								</div>
-								<div class="col-xs-4 text-center">
-									<a href="#">Friends</a>
-								</div>
-							</li>
-							<!-- Menu Footer-->
-							<li class="user-footer">
-								<div class="pull-left">
-									<a href="#" class="btn btn-default btn-flat">Profile</a>
-								</div>
-								<div class="pull-right">
-									<a href="#" class="btn btn-default btn-flat">Sign out</a>
-								</div>
-							</li>
-						</ul>
-					</li>
-					<!-- Control Sidebar Toggle Button -->
-					<li>
-						<a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
-					</li>
-				</ul>
-			</div>
-		</nav>
-	</header>
-	<!-- Left side column. contains the logo and sidebar -->
-	<aside class="main-sidebar">
-
-		<!-- sidebar: style can be found in sidebar.less -->
-		<section class="sidebar">
-
-			<!-- search form (Optional) -->
-			<form action="#" method="get" class="sidebar-form">
-				<div class="input-group">
-					<input type="text" name="q" class="form-control" placeholder="Searh sidebar..."/>
-					<span class="input-group-btn">
-						<button type='submit' name='search' id='search-btn' class="btn btn-flat"><i class="fa fa-search"></i></button>
-					</span>
-				</div>
-			</form>
-			<!-- /.search form -->
-
-			<!-- Sidebar Menu -->
-			<ul class="sidebar-menu">
-				<li class="header">Views</li>
-				<!-- Optionally, you can add icons to the links -->
-				<li ng-repeat="navItem in root.topNavItems">
-					<a ng-href="{{navItem.link}}">
-						<i class='fa fa-{{navItem.icon}}'></i> <span>{{navItem.title}}</span>
-					</a>
-				</li>
-			</ul><!-- /.sidebar-menu -->
-		</section>
-		<!-- /.sidebar -->
-	</aside>
+<!-- ngIf: !root.sidebarEnabled --><header ng-if="!root.sidebarEnabled" class="main-header ng-scope">
+    <nav class="navbar navbar-static-top">
+        <div class="container">
+            <div class="navbar-header">
+                <a href="/" class="navbar-brand"><code>Loklak</code></a>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
+                    <i class="fa fa-bars"></i>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <!-- ngRepeat: navItem in root.topNavItems --><li ng-repeat="navItem in root.topNavItems" class="ng-scope">
+                        <a ng-href="/" class="ng-binding" href="/"><span class="fa fa-home"></span> Home</a>
+                    </li><!-- end ngRepeat: navItem in root.topNavItems --><li ng-repeat="navItem in root.topNavItems" class="ng-scope">
+                        <a ng-href="/wall/create" class="ng-binding" href="/wall/create"><span class="fa fa-list"></span> Wall</a>
+                    </li><!-- end ngRepeat: navItem in root.topNavItems --><li ng-repeat="navItem in root.topNavItems" class="ng-scope">
+                        <a ng-href="/map" class="ng-binding" href="/map"><span class="fa fa-map-marker"></span> Maps</a>
+                    </li><!-- end ngRepeat: navItem in root.topNavItems -->
+                </ul>
+            </div>
+            <div class="collapse navbar-collapse pull-left" id="navbar-collapse" style="margin-left: 15%;">
+                <img src="../images/loklak_icon_yellow_45x45_transparent.png" alt="">
+            </div>
+            <div class="navbar-custom-menu">
+                <ul class="nav navbar-nav">
+                    <form class="navbar-form navbar-left ng-pristine ng-valid" role="search" action="/search">
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="navbar-search-input" name="q" placeholder="Search" onkeydown="if (event.keyCode == 13) { this.form.submit(); return false; }">
+                        </div>
+                    </form>
+                </ul>
+                <ul class="nav navbar-nav">
+                <li>
+                    <a ng-href="/auth/twitter" target="_self" href="/auth/twitter">
+                        <span><img src="[%= profileimage %]"><%= username %></span>
+                    </a>
+                </li>
+                </ul>
+                <!-- <ul class="dropdown-menu">
+                  User image 
+                  <li class="user-header">
+                    <img src="../../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                    <p>
+                      Alexander Pierce - Web Developer
+                      <small>Member since Nov. 2012</small>
+                    </p>
+                  </li>
+                  Menu Footer
+                  <li class="user-footer">
+                    <div class="pull-left">
+                      <a href="#" class="btn btn-default btn-flat">Profile</a>
+                    </div>
+                    <div class="pull-right">
+                      <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                    </div>
+                  </li>
+                </ul>
+              </li>
+                </ul> -->
+            </div>
+        </div>
+    </nav>
+</header><!-- end ngIf: !root.sidebarEnabled --></div>
 	<div class="content-wrapper">
 		<div class="row cms-view">
 			<div class="col-md-12">
-				<h1 class="page-header"><strong>Hey</strong>, Welcome to <code>loklak</code></h1>
+				<h1 class="page-header"><strong>Hey <%= name %></strong>, Welcome to <code>loklak</code></h1>
 				<h2>Feel like telling the world about something ? Why not start here ?</h2>
 				<h3>Share your tweet !! </h3>
 				<h3>We are planning to support you to post as many words as you want to twitter ! Support us on <a href="https://github.com/loklak">Github</a></h3>
