Add login with twitter as a directive module

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,6 +12,13 @@
 .universal-search {
     display: inline-block;
 }
+
+.signin-twitter {
+	display: inline-block;
+	padding: 15px;
+	line-height: 20px;
+	color: white;
+}
 /* Old styles */
 
 body {
