Fixes #137 Completely, throws out user info after login

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -60,8 +60,8 @@
                 </ul>
                 <ul class="nav navbar-nav">
                 <li>
-                    <a ng-href="/auth/twitter" target="_self" href="/auth/twitter">
-                        <span><img src="[%= profileimage %]"><%= username %></span>
+                    <a ng-href="#" target="_self" href="#" style="padding-bottom:0px;margin-top:-6px;">
+                        <span><img src="<%= profileimage %>" height="30px" width="30px"><%= username %></span>
                     </a>
                 </li>
                 </ul>
