--- a/app/views/search.html
+++ b/app/views/search.html
@@ -1,25 +1,48 @@
 <div class="content-wrapper">
     <div class="search-container container-fluid">
-        <div ng-if="!search.statuses" class="input-container container">
+        <!-- <div ng-if="!search.statuses" class="input-container container">
             <form ng-submit="search.update(term)" class="navbar-form navbar-left" role="search">
            <div class="form-group">
              <input ng-model="term" type="text" class="form-control" id="navbar-search-input" placeholder="Search">
            </div>
          </form>
             <div class="clearfix"></div>
-         </div>
+         </div> -->
 
         
         <!-- Main content -->
         <div class="container content-container">
-            <!-- Separator -->
-            <div class="wide-hr"></div>           
+            <!-- Left content: Who to follow, trends -->
+            <div class="col-md-3"></div>   
+
+            <!-- Center result + option filters -->
             <div ng-show="search.showResult" class="result-container col-md-6">
-                 <div ng-repeat="status in search.statuses" status open-swipe="search.openSwipe" data="status" show-modal="search.showModal"></div>
+                <!-- Filters -->
+                <div class="filters-container">
+                    <ul class="search-modes">
+                        <li ng-repeat="filter in search.searchFilters" ng-class="(search.currentFiltter == filter) ? 'active' : ''" ng-click="search.filterSearch(filter)">
+                            <a href="#">{{filter}}</a>
+                        </li>
+
+                        <!-- <li class="active" filter-attr="top"><a href="#">Top</a></li>
+                        <li><a href="#">Live</a></li>
+                        <li><a href="#">Accounts</a></li>
+                        <li><a href="#">Photos</a></li>
+                        <li><a href="#">Videos</a></li> -->
+
+                        <li><a href="#">More options</a></li>
+                    </ul>
+                </div>
+
+                <!-- Main results -->
+                <div class="main-result-container">
+                    <div ng-repeat="status in search.filteredStatuses" status open-swipe="search.openSwipe" data="status" show-modal="search.showModal"></div>   
+                </div>
             </div>
 
-            <div class="dashboard dashboard-right">
-               
+            <!-- Right content: Other statistics -->
+            <div class="dashboard dashboard-right col-md-3">
+
             </div>
 
         </div>
