--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1679,13 +1679,24 @@ body {
 	font-size: 16px;
 }
 .wall-creation-form > * input[type="text"] {
-	width: 50%;
+	/*width: 50%;*/
 }
 .tabs-left > li {
 	padding: 0;
 }
 .tabs-left > li > a {
-	min-height: 150px;
+	height: 150px;
 	text-align: center;
 	padding: 20% 0;
+}
+.modal-dialog {
+  width: 100%;
+  height: 100%;
+  margin-left: 5px;
+  padding: 0 10px;
+}
+
+.modal-content {
+  height: 100%;
+  border-radius: 0;
 }
