Removal of auth content [Review @aneeshd16]

--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -163,7 +163,7 @@
                         </a>
                     </li> -->
                 </ul>
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav" ng-if="root.twitterSession">
                     <li style="margin-top:15%;">
                     <button id="global-new-tweet-button" type="button" class="js-global-new-tweet js-tooltip btn primary-btn tweet-btn js-dynamic-tooltip" data-placement="bottom" data-component-term="new_tweet_button" data-original-title=""  data-toggle="modal" data-target="#myModal" style="background-color:#339DC3;color:white;">
                   <span class="fa fa-twitter"></span>
