--- a/app/views/home.html
+++ b/app/views/home.html
@@ -4,7 +4,7 @@
       <!-- Center result + option filters -->
       <!-- Left content: Who to follow, trends -->
       <div class="result-container col-md-3" style="margin-top:4%;">
-        <div class="row cms-view direct-chat-messages">
+        <div class="row cms-view direct-chat-messages" ng-if="root.twitterSession">
             <div class="direct-chat-msg">
               <div class="direct-chat-info clearfix">
                 <span class="direct-chat-name pull-left">{{root.twitterSession.first_name}}</span>
@@ -24,7 +24,7 @@
             <h2>Mass Message (aka Tweets) Evaluation</h2>
             <p>This is the front-end for the <a href="http://loklak.org">Distributed Message Search Server <code>loklak</code></a>. We collect Tweets and provide mass-data evaluation functions using search engine technology.</p>
         </div>
-        <div class="col-md-12">
+        <div class="col-md-12" ng-if="root.twitterSession">
             <h1>Your recent tweets</h1>
             <div class="main-result-container">
                 <div class="box-body chat" id="chat-box" style="overflow: hidden; width: auto; height: 250px;">
