--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -1,4 +1,42 @@
+
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<style type="text/css">
+@media(max-width:767px) {
+    .navbar .navbar-form {
+        width: 65%;
+        padding-left:0;
+        padding-right:0;
+    }
+}
+@media(min-width:768px) {
+    .navbar .navbar-form {
+        width: 250px;
+    }
+}
+@media(max-width:767px) {
+    .pull-responsive {
+        float: left;
+    }
+}
+@media(min-width:768px) {
+    .pull-responsive {
+        float: right;
+    }
+}
+.navbar .navbar-form {
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-right: 0;
+    margin-left: 0;
+    border: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    float: none;
+}
+#brandimage{
+    margin-top: -15px;
+}
+</style>
 <header ng-if="root.sidebarEnabled" class="main-header">
     <a href="index2.html" class="logo">
         <span class="logo-mini"><b>A</b>LT</span>
@@ -132,33 +170,37 @@
     <nav class="navbar navbar-static-top">
         <div class="container">
             <div class="navbar-header">
-                <a href="/" class="navbar-brand"><code>Loklak</code></a>
+                <a class="navbar-brand hidden-xs" href="/"><code>Loklak</code></a>
+                <a class="navbar-brand visible-xs" href="/"><img id="brandimage" src="../images/loklak_icon_yellow_45x45_transparent.png" alt=""></a>
+               
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-            </div>
-            <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li ng-repeat="navItem in root.topNavItems">
-                        <a ng-href="{{navItem.link}}"><span class="{{navItem.icon}}"></span> {{navItem.title}}</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="collapse navbar-collapse pull-left" id="navbar-collapse" style="margin-left: 15%;">
-                <img src="../images/loklak_icon_yellow_45x45_transparent.png" alt="">
-            </div>
-            <div class="navbar-custom-menu">
-                <ul class="nav navbar-nav">
-                    <form class="navbar-form navbar-left" role="search" action="/search" >
+                <form class="navbar-form pull-left" role="search" action="/search" >
                         <div class="form-group">
                             <input type="text" class="form-control" id="navbar-search-input" name="q" placeholder="Search" onkeydown="if (event.keyCode == 13) { this.form.submit(); return false; }">
                         </div>
-                    </form>
+                </form>
+            </div>
+            <div class="collapse navbar-collapse " id="navbar-collapse">
+                <ul class="nav navbar-nav pull-responsive">
+                    <li ng-repeat="navItem in root.topNavItems">
+                        <a ng-href="{{navItem.link}}"><span class="{{navItem.icon}}"></span> {{navItem.title}}</a>
+                    </li>
+                    <li>
+                     <a lass="navbar-brand visible-xs" ng-href="/auth/twitter" target="_self">
+                        <span><i class="fa fa-twitter"></i></span>Signup
+                    </a>
+                </li>
+                
                 </ul>
-                <ul class="nav navbar-nav">
+            </div>
+           
+            <!--<div class="navbar-custom-menu">
+               
                 <li>
                     <a ng-href="/auth/twitter" target="_self">
-                        <span><i style="padding-right: 4px;" class="fa fa-twitter"></i>Signup Via Twitter</span>
+                        <span><i style="padding-right: 4px;" class="fa fa-twitter"></i><p id="signup">Signup Via Twitter</p></span>
                     </a>
                 </li>
                 </ul>
