--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -206,6 +206,7 @@
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h4 class="modal-title">Post a tweet</h4>
       </div>
+      <form action="" method="post">
       <div class="modal-body">
         <textarea name="tweet" id="tweet" cols="30" rows="5" class="form-control"></textarea>
       </div>
@@ -213,6 +214,7 @@
         <input type="submit" class="btn btn-info btn-flat" value="Tweet">&nbsp;
         <button type="button" class="btn btn-default btn-flat" data-dismiss="modal">Close</button>
       </div>
+      </form>
     </div>
 
   </div>
