Lightbox on load asking for signup, dropdown user content, need help

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,4 +1,4 @@
-<div class="content-wrapper">
+<div class="content-wrapper" onload="#signupModal">
     <!-- Main content -->
     <div class="container-fluid content-container">
       <!-- Center result + option filters -->
