--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -206,7 +206,7 @@
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h4 class="modal-title">Post a tweet</h4>
       </div>
-      <form action="" method="post">
+      <form action="tweet.postTweet()" method="post">
       <div class="modal-body">
         <textarea name="tweet" id="tweet" cols="30" rows="5" class="form-control"></textarea>
       </div>
@@ -219,3 +219,29 @@
 
   </div>
 </div>
+<!-- Sign Up Modal -->
+<div id="signupModal" class="modal fade" role="dialog" ng-if="!root.twitterSession">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title" style="text-align:center">Signup for loklak</h4>
+      </div>
+      <div class="modal-body">
+        <h1 class="fa fa-twitter fa-6" style="color:#55acee;margin-left:45%;font-size:500%;"></h1>
+        <h3 style="text-align:center;">Not on loklak ? Sign up, tune into things as they happen and get updates as they happen</h3>
+      </div>
+      <div class="modal-footer" style="text-align:center;">
+        <button class="btn btn-info btn-flat" value="Sign up Via Twitter" ng-click="hello('twitter').login()"><i class="fa fa-twitter"></i>&nbsp;Signup with Twitter</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+<script type="text/javascript">
+    $(window).load(function(){
+        $('#signupModal').modal('show');
+    });
+</script>
