--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -13,10 +13,51 @@
     display: inline-block;
 }
 
+@media(max-width:767px) {
+    .navbar .navbar-form {
+        width: 65%;
+        padding-left:0;
+        padding-right:0;
+    }
+}
+@media(min-width:768px) {
+    .navbar .navbar-form {
+        width: 250px;
+    }
+}
+@media(max-width:767px) {
+    .pull-responsive {
+        float: left;
+    }
+}
+@media(min-width:768px) {
+    .pull-responsive {
+        float: right;
+    }
+}
+.navbar .navbar-form {
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-right: 0;
+    margin-left: 0;
+    border: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    float: none;
+}
+.main-header #navbar-search-input
+{
+	width:auto;
+	border-radius:21px;
+}
+#brandimage{
+    margin-top: -15px;
+}
+
 // Twitter sign in
 	.signin-twitter {
 		height: 50px;
-		min-width: 300px;
+		width:auto;
 		overflow: hidden;
 		display: inline-block;
 		line-height: 20px;
@@ -27,7 +68,7 @@
 				display: inline-block;
 				height: 50px;
 				font-size: 14px;
-				padding: 17px;
+				padding-top: 5px;
 				color: white;
 			}
 			span.avatar-container {
@@ -45,7 +86,7 @@
 				display: inline-block;
 				height: 50px;
 				font-size: 14px;
-				padding: 17px;
+				padding-top: 3px;
 				color: white;
 			}
 		}
@@ -1679,31 +1720,13 @@ body {
 	font-size: 16px;
 }
 .wall-creation-form > * input[type="text"] {
-	/*width: 50%;*/
+	width: 50%;
 }
 .tabs-left > li {
 	padding: 0;
 }
 .tabs-left > li > a {
-	height: 150px;
+	min-height: 150px;
 	text-align: center;
 	padding: 20% 0;
-}
-.modal-dialog {
-  width: 100%;
-  height: 100%;
-  margin-left: 5px;
-  padding: 0 10px;
-}
-
-.modal-content {
-  height: 100%;
-  border-radius: 0;
-}
-.redirect-page {background:#F5F8FA;height:100%;text-align:center;display:-webkit-flex;display:flex;height:100%;-webkit-flex-flow:column wrap;flex-flow:column wrap;-webkit-justify-content:center;justify-content:center;margin:0;padding:10px}
-.loading-redirect{font-size:50px;height:1em;-webkit-animation:fadeout .5s 5s;animation:fadeout .5s 5s;-webkit-animation-fill-mode:forwards;animation-fill-mode:forwards}.loading-redirect span{-webkit-animation:fadein .5s .5s alternate infinite;animation:fadein .5s .5s alternate infinite}.loading-redirect span:nth-child(2){-webkit-animation-delay:.75s;animation-delay:.75s}.loading-redirect span:nth-child(3){-webkit-animation-delay:1s;animation-delay:1s}#redirect-text{text-align:center;font-family:helvetica;opacity:0;-webkit-animation:fadein .5s 3s;animation:fadein .5s 3s;-webkit-animation-fill-mode:forwards;animation-fill-mode:forwards}.overflow{background:#000;color:#fff;max-width:100%;text-align:left}@-webkit-keyframes fadein{from{opacity:0;-webkit-transform:scale(.2)}to{opacity:1;-webkit-transform:scale(1)}}@-webkit-keyframes fadeout{to{opacity:0;height:0}}@keyframes fadein{from{opacity:0;transform:scale(.2)}to{opacity:1;transform:scale(1)}}@keyframes fadeout{to{opacity:0;height:0}}
-.loading-redirect-img {
-	width: 100px;
-	height: 100px;
-	margin: 0 auto;
 }
