Fixed floating icon

--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -145,7 +145,7 @@
                 </ul>
             </div>
             <div class="collapse navbar-collapse pull-left" id="navbar-collapse" style="margin-left: 15%;">
-                <img src="../images/loklak_icon_yellow_45x45_transparent.png" alt="">
+                <img class="hidden-xs hidden-sm hidden-md" src="../images/loklak_icon_yellow_45x45_transparent.png" alt="">
             </div>
             <div class="navbar-custom-menu">
                 <ul class="nav navbar-nav">
