--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1729,14 +1729,14 @@ body {
 	text-align: center;
 	padding: 20% 0;
 }
-.modal-dialog {
+.wall-modal-dialog {
   width: 100%;
   height: 100%;
   margin-left: 5px;
   padding: 0 10px;
 }
 
-.modal-content {
+.wall-modal-content {
   height: 100%;
   border-radius: 0;
 }
