--- a/app/views/wall/create.html
+++ b/app/views/wall/create.html
@@ -7,10 +7,10 @@
         <!-- <h1>Create a new twitter wall</h1> -->
     </section>
     <section class="content">
-        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
-        <div class="modal fade" id="myModal" role="dialog">
-            <div class="modal-dialog modal-lg">
-                <div class="modal-content">
+        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#wall-modal">Open Modal</button>
+        <div class="modal fade" id="wall-modal" role="dialog">
+            <div class="modal-dialog modal-lg wall-modal-dialog">
+                <div class="modal-content wall-modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <h2 class="modal-title">Loklak Twitter Wall</h2>
