--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1731,9 +1731,10 @@ body {
 }
 .wall-modal-dialog {
   width: 100%;
-  height: 100%;
-  margin-left: 5px;
-  padding: 0 10px;
+  height: 95%;
+  margin-top: 10px;
+  padding: 0px 10px 0 10px;
+
 }
 
 .wall-modal-content {
