Remove modal fn in search, clean related template, ctrl and directive

--- a/app/views/search.html
+++ b/app/views/search.html
@@ -36,7 +36,7 @@
 
                 <!-- Main results -->
                 <div class="main-result-container">
-                    <div ng-repeat="status in search.statuses" status open-swipe="search.openSwipe" data="status" show-modal="search.showModal"></div>   
+                    <div ng-repeat="status in search.statuses" status open-swipe="search.openSwipe" data="status"></div>   
                 </div>
             </div>
 
